[#2] Added uwsgi dependences

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -2,8 +2,8 @@
 # defaults file for uwsgi
 
 uwsgi_package_dependencies:
-  - "wget"
-  - "curl"
+  - "libpcre3"
+  - "libpcre3-dev"
 
 uwsgi_dependencies:
   - name: "python2.7-dev"
@@ -11,8 +11,7 @@ uwsgi_dependencies:
   - name: "python-dev"
     version: ""
   - name: "python-pip"
-  - name: "git"
 
 uwsgi_pip_dependencies:
-  - name: "httplib2"
-    version: "0.7.7"
+  - name: "uWSGI"
+    version: "2.0.11.2"
