[#2] Fixed name values task uwsgi

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -1,7 +1,9 @@
 ---
 # defaults file for uwsgi
 
+uwsgi_name: "uwsgi"
 uwsgi_dir_home: "/home/{{ user }}"
+uwsgi_file_load_virtualenvwrapper: ""
 
 uwsgi_package_dependencies:
   - "libpcre3"
