--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,15 +8,16 @@ galaxy_info:
   license: Mit
   min_ansible_version: 1.4
   platforms:
-  # - name: EL
-    # versions:
-     # - all
-     # - 5
-     # - 6
-     # - 7
-  # - name: GenericUNIX
-    # versions:
-    # - any
+  #- name: EL
+  #  versions:
+  #  - all
+  #  - 5
+  #  - 6
+  #  - 7
+  #- name: GenericUNIX
+  #  versions:
+  #  - all
+  #  - any
   #- name: Fedora
   #  versions:
   #  - all
@@ -25,6 +26,10 @@ galaxy_info:
   #  - 18
   #  - 19
   #  - 20
+  #- name: SmartOS
+  #  versions:
+  #  - all
+  #  - any
   #- name: opensuse
   #  versions:
   #  - all
@@ -56,12 +61,16 @@ galaxy_info:
   #  - 9.2
   - name: Ubuntu
     versions:
-      # - all
-      - lucid    # 10.04
-      - precise  # 12.04
-      - saucy    # 13.10
-      - trusty   # 14.04
-      # - utopic   # 14.10
+  #  - all
+  #  - lucid
+  #  - maverick
+  #  - natty
+  #  - oneiric
+  #  - precise
+  #  - quantal
+  #  - raring
+  #  - saucy
+    - trusty
   #- name: SLES
   #  versions:
   #  - all
@@ -87,8 +96,20 @@ galaxy_info:
   # the platforms above, uncomment those that apply to your role.
   #
   categories:
-  - networking
-  - web
+  #- cloud
+  #- cloud:ec2
+  #- cloud:gce
+  #- cloud:rax
+  #- clustering
+  #- database
+  #- database:nosql
+  #- database:sql
+  - development
+  #- monitoring
+  #- networking
+  #- packaging
+  #- system
+  #- web
 dependencies: []
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
