--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -3,24 +3,40 @@
 
 uwsgi_name: "uwsgi"
 uwsgi_dir_home: "/home/{{ user }}"
-uwsgi_file_load_virtualenvwrapper: ""
+uwsgi_file_load_virtualenvwrapper: "{{ uwsgi_dir_home }}/.pyenvrunrc"
+uwsgi_pid_file: "{{ uwsgi_name }}.pid"
 
-uwsgi_package_dependencies:
-  - "libpcre3"
-  - "libpcre3-dev"
+# uwsgi_pip_dependencies:
+#   - name: "uWSGI"
+#     version: "2.0.11.2"
 
-uwsgi_dependencies:
-  - name: "python2.7-dev"
-    version: ""
-  - name: "python-dev"
-    version: ""
-  - name: "python-pip"
-    version: ""
 
-uwsgi_package:
-  name: "uwsgi"
-  version: ""
-
-uwsgi_pip_dependencies:
-  - name: "uWSGI"
-    version: "2.0.11.2"
+# uwsgi_dict:
+#   project: "name project"
+#   base: "app_dir_home"
+#   chdir: "app_dir"
+#   home: "virtualenv_path"
+#   pythonpath: "app_dir"
+#   socket: "app_proxypass"
+#   module: "app_module"
+#   uid: "user"
+#   gid: "user"
+#   master: true
+#   vacuum: true
+#   virtualenv: "virtualenv_path"
+#   max_requests: 20000
+#   processes: 1
+#   threads: 2
+#   enable_threads: true
+#   # http: ":3097"
+#   pidfile: "{{ uwsgi_dir.run }}/{{ app_name }}.pid"
+#   # touch_reload: "/path/touch/reload"
+#   # daemonize: "{{ uwsgi_dir.run }}/{{ app_name }}.log"
+#   # harakiri: 30
+#   # harakiri_verbose: True
+#   log_x_forwarded_for: true
+#   # stats: "127.0.0.1:9000"
+#   log_5xx: true
+#   log_slow: 30000
+#   # shared_socket: ":80"
+#   buffer_size: "8096"
