--- a/tasks/pip.yaml
+++ b/tasks/pip.yaml
@@ -4,4 +4,4 @@
   become: true
   pip: name="{{ item.name }}" version="{{ item.version }}"
   when: uwsgi_pip_dependencies is defined
-  with_items: uwsgi_pip_dependencies
+  with_items: "{{ uwsgi_pip_dependencies | default({}) }}"
