--- a/tasks/templates.yaml
+++ b/tasks/templates.yaml
@@ -5,5 +5,5 @@
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
     mode: 0755
-  with_items: _uwsgi.templates  | default({})
+  with_items: "{{ _uwsgi.templates  | default({}) }}"
   when: _uwsgi.templates is defined
