--- a/tasks/dependences.yaml
+++ b/tasks/dependences.yaml
@@ -10,26 +10,11 @@
 
 - name: Install uwsgi package dependencies
   become: true
-  apt:
+  package:
     name: "{{ item }}"
     state: present
-  register: install_uwsgi_package_dependencies
-  when: uwsgi_package_dependencies is defined
-  with_items: "{{ uwsgi_package_dependencies | defaul([]) }}"
+  register: install_uwsgi_packages
+  with_items: "{{ _uwsgi_packages | default([]) }}"
+  when: _uwsgi_packages is defined
   tags:
-    - apt
     - dependencies
-- debug: var=install_uwsgi_package_dependencies.stdout_lines
-
-- name: Install uwsgi dependencies
-  become: true
-  apt:
-    name: "{{ item.name }}"
-    state: present
-  register: install_uwsgi_dependencies
-  when: uwsgi_dependencies is defined
-  with_items: "{{ uwsgi_dependencies | defaul({}) }}"
-  tags:
-    - apt
-    - dependencies
-- debug: var=install_uwsgi_dependencies.stdout_lines
