--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: Luis Mayta
   description: Ansible role to services Uwsgi
-  company: Hadenlabs
+  company: DgNest
   version: 0.0.8
   license: Mit
   min_ansible_version: 2.0
